--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>Geometric Art Generator</title>
   </head>
   <body>
+    <div class="wrapper">
+      <div class="container">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <button id="btn">Generate</button>
+    </div>
 
     <script src="scripts.js"></script>
   </body>
